; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_ssl.c_write_empty_string.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_ssl.c_write_empty_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.buffer*)* @write_empty_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_empty_string(%struct.buffer* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.buffer*, align 8
  store %struct.buffer* %0, %struct.buffer** %3, align 8
  %4 = load %struct.buffer*, %struct.buffer** %3, align 8
  %5 = call i32 @buf_write_u16(%struct.buffer* %4, i32 0)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %9

8:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %9

9:                                                ; preds = %8, %7
  %10 = load i32, i32* %2, align 4
  ret i32 %10
}

declare dso_local i32 @buf_write_u16(%struct.buffer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
